--- a/src/components/SplashPage/SplashPage.scss
+++ b/src/components/SplashPage/SplashPage.scss
@@ -1,4 +1,5 @@
 .splash-page {
+	overflow: hidden;
 	.splash-img {
 		width: 100%;
 		height: 720px;
